--- a/WPF-Charts/WPF-Charts/MainWindow.xaml
+++ b/WPF-Charts/WPF-Charts/MainWindow.xaml
@@ -6,8 +6,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_Charts"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="650" Width="1000">
     <Grid>
-        <oxy:PlotView Name="plot" Width="400" Height="300"/>
+        <oxy:PlotView Name="plot"/>
+        <TextBox HorizontalAlignment="Left" FontSize="16" Margin="676,68,0,0" TextWrapping="Wrap" Text="Wartość 1..." LostFocus="lostfocus1" GotFocus="gotfocu1" Name="textBox1" VerticalAlignment="Top" Width="144" Height="25"/>
+        <TextBox HorizontalAlignment="Left" FontSize="16" Margin="825,68,0,0" TextWrapping="Wrap" Text="Wartość 2..." LostFocus="lostfocus2" GotFocus="gotfocus2" Name="textBox2" VerticalAlignment="Top" Width="144" Height="25"/>
+        <RadioButton Content="circular" Name="radioButton1" HorizontalAlignment="Left" Margin="695,111,0,0" VerticalAlignment="Top"/>
+        <RadioButton Content="linear" Name="radioButton2" HorizontalAlignment="Left" Margin="785,111,0,0" VerticalAlignment="Top"/>
+        <RadioButton Content="columnar" Name="radioButton3" HorizontalAlignment="Left" Margin="875,111,0,0" VerticalAlignment="Top"/>
+        <Label Content="Type chart: " FontSize="15" HorizontalAlignment="Left" Margin="604,102,0,0" VerticalAlignment="Top"/>
+        <Button Content="Create" Name="button1" HorizontalAlignment="Left" Margin="762,145,0,0" VerticalAlignment="Top" Width="101" Click="button1_Click"/>
     </Grid>
 </Window>
